排除静态代码